syntax = "proto3";

package nnpb;

service NameNodeInternalRoutes {
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse);
}

message JoinClusterRequest {
  string ID = 1;
  string IP = 2;
  string Port = 3;
}

message JoinClusterResponse {
  enum JoinStatus {
    SUCCESS = 0;
    FAILURE = 1;
  }

  JoinStatus Status = 1;
}
